[workspace]
resolver = "2"
members = [
    "crates/mutation-visualizer"
, "crates/mutation-visualizer-cli"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.81.0"
version = "0.1.0"

[workspace.dependencies]
chrono       = { version = "0.4",    default-features = false, features = ["clock", "serde"] }
clap         = { version = "4.5.17", default-features = true, features = [ "derive", "string"] }
datafusion   = { version = "42",     default-features = false }
color-eyre   = { version = "0.6.3",  default-features = false }
env_logger   = { version = "0.11",   default-features = false }
log          = { version = "0.4",    default-features = false }
serde        = { version = "1",      default-features = false, features = ["std", "derive"] }
strum        = { version = "0.26",   default-features = false, features = ["derive"] }
strum_macros = { version = "0.26",   default-features = false }
thiserror    = { version = "1",      default-features = false }
tokio        = { version = "1.40 ",  default-features = false, features = ["macros", "rt-multi-thread"] }
