[workspace]
resolver = "2"
members = [
    "crates/mutation-heatmap"
, "crates/mutation-heatmap-cli"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.81.0"
version = "0.1.0"

[workspace.dependencies]
arrow        = { version = "53",     default-features = false }
base64       = { version = "0.22.1", default-features = true}
chrono       = { version = "0.4",    default-features = false, features = ["clock", "serde"] }
clap         = { version = "4.5.17", default-features = true, features = [ "derive", "string"] }
datafusion   = { version = "42",     default-features = false }
color-eyre   = { version = "0.6.3",  default-features = false }
env_logger   = { version = "0.11",   default-features = false }
log          = { version = "0.4",    default-features = false }
resvg        = { version = "0.43.0", default-features = true, features = ["text"]}
serde        = { version = "1",      default-features = false, features = ["std", "derive"] }
svg          = { version = "0.17.0", default-features = false}
strum        = { version = "0.26",   default-features = false, features = ["derive"] }
strum_macros = { version = "0.26",   default-features = false }
thiserror    = { version = "1",      default-features = false }
tokio        = { version = "1.40 ",  default-features = false, features = ["macros", "rt-multi-thread"] }
usvg         = { version = "0.43.0", default-features = true}




