[workspace]
resolver = "2"
members = [
    "crates/mutation-heatmap"
, "crates/mutation-heatmap-cli"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.81.0"
version = "0.1.0"

[workspace.dependencies]
color-eyre   = { version = "0.6.3",  default-features = false }
log          = { version = "0.4",    default-features = false }
