[package]
name = "mutation-heatmap-cli"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["plot"]
plot = ["mutation-heatmap/plot"]

[dependencies]
chrono       = { version = "0.4",    default-features = false, features = ["clock", "serde"] }
clap         = { version = "4.5.17", default-features = true, features = [ "derive", "string"] }
color-eyre   = { workspace = true }
env_logger   = { version = "0.11",   default-features = false }
log                 = { workspace = true }
mutation-heatmap    = { default-features = false, path = "../mutation-heatmap"}
serde        = { version = "1",      default-features = false, features = ["std", "derive"] }
strum        = { version = "0.26",   default-features = false, features = ["derive"] }
strum_macros = { version = "0.26",   default-features = false }
thiserror    = { version = "1",      default-features = false }
tokio        = { version = "1.40 ",  default-features = false, features = ["macros", "rt-multi-thread"] }

[profile.dev]
opt-level = 3

[profile.release]
strip = true # Strip symbols from binary
lto   = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce parallele Code generation units to increase optimization
