[package]
name = "mutation-heatmap"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []

[dependencies]
arrow        = { workspace = true }
base64       = { workspace = true }
clap         = { workspace = true }
color-eyre   = { workspace = true }
datafusion   = { workspace = true, features = ["nested_expressions", "regex_expressions"] }
fontdb       = { version = "0.22.0", default-feature = true }
log          = { workspace = true }
rand         = { version = "0.8.5", default-features =  false }
serde        = { workspace = true }
strum        = { workspace = true }
strum_macros = { workspace = true }
thiserror    = { workspace = true }
tiny-skia-path = { version = "0.11.4", default-features = false }
svg          = { workspace = true }
resvg        = { workspace = true }
tokio        = { workspace = true }
usvg         = { workspace = true }