[package]
name = "mutation-heatmap"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["plot"]
plot = ["dep:base64", "dep:fontdb", "dep:svg", "dep:rand", "dep:resvg", "dep:usvg", "dep:tiny-skia-path"]

[dependencies]
arrow          = { version = "53",     default-features = false,  optional = false }
base64         = { version = "0.22.1", default-features = true,   optional = true  }
color-eyre     = { workspace = true }
datafusion     = { version = "42",     default-features = false,  optional = false, features = ["nested_expressions", "regex_expressions", "parquet"]  }
deltalake      = { version = "0.20.1", default-features = false,  optional = false, features = ["datafusion"] }
fontdb         = { version = "0.22.0", default-feature = true,    optional = true  }
log            = { workspace = true }
noodles        = { version = "0.83.0", default-features = false,  optional = false, features = ["gff"] }
svg            = { version = "0.18.0", default-features = false,  optional = true  }
rand           = { version = "0.8.5",  default-features =  false, optional = true  }
resvg          = { version = "0.44.0", default-features = true,   optional = true,  features = ["text"]}
tiny-skia-path = { version = "0.11.4", default-features = false,  optional = true  }
usvg           = { version = "0.44.0", default-features = true,   optional = true  }